# ooplr5

./: CMakeLists.txt
include/: CustomMemoryResource.h  Stack.h
lib/: CustomMemoryResource.cpp
src/: main.cpp
tests/: tests.cpp
